[gd_scene load_steps=15 format=2]

[ext_resource path="res://Enemies/EyeStalkerOutline.png" type="Texture" id=1]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=2]
[ext_resource path="res://Hurtboxes + Hitboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/EyeStalker.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=6]
[ext_resource path="res://Enemies/Shield.tscn" type="PackedScene" id=7]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/active = false

[sub_resource type="Animation" id=2]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_bullet"
} ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.25311
height = 8.20786

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.53642
height = 7.46017

[sub_resource type="Animation" id=6]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="EyeStalker" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 7.869 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )
hframes = 6
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/move = SubResource( 2 )
anims/shoot = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0566187, 4.28964 )
shape = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.530334, 1.94454 )
shape = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 6

[node name="MoveTimer" type="Timer" parent="."]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 6 )
anims/Stop = SubResource( 7 )

[node name="Shield" parent="." instance=ExtResource( 7 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]

[editable path="Hurtbox"]
